# EmailHarvester

./: .gitignore  domains.txt  pyproject.toml  scrapy.cfg
emailharvester/: items.py  itemsloaders.py  middlewares.py  pipelines.py  settings.py
emailharvester/spiders/: emailspider.py
